test/sema/positive/if.impala
fn f(x : int, y : int, b : bool) -> int {
    if b { x }  else { y }
}
